--- a/frames/rental.html
+++ b/frames/rental.html
@@ -9,6 +9,6 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     </head>
     <body>
-        <h3>This is the rental page of the site</h3>
+        <iframe id="contactframe" src="https://forms.office.com/Pages/ResponsePage.aspx?id=iH7-1hzmWkqNHRUkQaFK-uNr6EqkEktCoJ7jd2oXHQhUMEJZQTFYNDZGT1VZMTdDMU1INkszUEJHSC4u&embed=true" scrolling="no" width="100%" height="2500px"></iframe>
     </body>
 </html>
