--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
         <title>Club Moneypenny</title>
         <meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-    <script src="assets/js/main.js"></script>
-		<link rel="stylesheet" href="assets/css/main.css" />
+    <script src="assets/js/main1.js"></script>
+		<link rel="stylesheet" href="assets/css/main1.css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     </head>
     <body>
